--- a/.gitignore
+++ b/.gitignore
@@ -345,3 +345,4 @@ ASALocalRun/
 /WebGYM/WebGYM.ViewModels/obj
 /WebGYM/WebGYM.ViewModels/bin
 /WebGYM/WebGYM.sln.DotSettings.user
+/Databases/Rentaldata
