--- a/WebGYM/WebGYM.Interface/WebGYM.Interface.csproj
+++ b/WebGYM/WebGYM.Interface/WebGYM.Interface.csproj
@@ -63,5 +63,11 @@
       <Name>WebGYM.ViewModels</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </None>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
