--- a/WebGYM/WebGYM/WebGYM.csproj
+++ b/WebGYM/WebGYM/WebGYM.csproj
@@ -1,7 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+   <TargetFramework>netcoreapp2.1</TargetFramework>
+  <LangVersion>latest</LangVersion>
+  <AspNetCoreModuleName>AspNetCoreModule</AspNetCoreModuleName>
+  <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
+  <UserSecretsId>14317d91-0b81-4815-b0ac-62cd34c286e1</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -9,13 +13,14 @@
     <DocumentationFile>bin\Debug\netcoreapp2.1\WebGYM.xml</DocumentationFile>
     <OutputPath>bin\Debug\netcoreapp2.1\</OutputPath>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.12.3" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.16.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.1.4" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.0.8.8" />
   </ItemGroup>
 
